<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Readery</string>
    <string name="title_home">Home</string>
    <string name="title_all_books">All Books</string>
    <string name="title_library">Library</string>
    <string name="title_settings">Settings / Info</string>
    <string name="search_books">Search books...</string>
    <string name="book_cover">Book cover</string>
    <string name="filter_books">Filter</string>
    <string name="tag_new">New</string>
    <string name="tag_popular">Popular</string>
    <string name="search_hint">search</string>
    <string name="tag_editors_choice">Editor\'s Choice</string>
    <string name="settings_title">Settings</string>
    <string name="info_title">Information</string>
    <string name="language">Language</string>
    <string name="github">GitHub</string>
    <string name="github_title">Our GitHub</string>
    <string name="github_description">Contribute to the project</string>
    <string name="add_to_library">Add to Library</string>
    <string name="read">Read</string>
    <string name="delete">delete</string>
    <string name="book_size">Size: %.2f MB</string>
    <string name="expand">more</string>
    <string name="collapse">less</string>
    <string name="book_added_to_library">Book added to library</string>
    <string name="pdf_not_found">PDF file not found for current language</string>
    <string name="filter_type_title">Filter Type</string>
    <string name="filter_order_title">Order</string>
    <string-array name="filter_types">
        <item>Title</item>
        <item>Author</item>
    </string-array>
    <string-array name="filter_orders">
        <item>A-Z</item>
        <item>Z-A</item>
    </string-array>
</resources>