<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Секция "Новые" -->
        <TextView
            android:id="@+id/section_new_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_new"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <!-- Секция "Популярные" -->
        <TextView
            android:id="@+id/section_popular_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_popular"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <!-- Секция "Выбор редакции" -->
        <TextView
            android:id="@+id/section_editors_choice_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_editors_choice"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_editors_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>